:bug: fix drawer behind content

--- a/src/styles/radix/_drawer.scss
+++ b/src/styles/radix/_drawer.scss
@@ -14,6 +14,7 @@
   color: $dark1;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  z-index: 1000;
 
   .DrawerHandle {
     height: 0.5rem;
